[package]
name = "algorithm"
version = "0.1.0"
edition = "2021"
authors = ["dravenk <longxianwen@outlook.com>"]
description = "Examples of various algorithms implemented in rust."
readme = "README.md"
repository = "https://github.com/dravenk/algorithm/"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/algorithm"
keywords = ["algorithm", "data-structure", "leetcode", "interview"]

[dependencies]
