[package]
name = "nat"
version = "0.1.0"
edition = "2021"
authors = ["dravenk <longxianwen@outlook.com>"]
description = "Network Address Translation."
readme = "README.md"
repository = "https://github.com/dravenk/nat/"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/nat"
keywords = ["nat", "data-structure","web3"]

[dependencies]
